syntax="proto3";
package orderpb;
option go_package="github.com/vietquan-37/gateway/pkg/order/pb";
import "google/rpc/status.proto";
import "google/rpc/error_details.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message AddProductRequest {
  int32 product_id = 1;
  int32 user_id = 2;
  int64 stock = 3;
}

message CommonResponse {
  string message = 1;
}

message DeleteDetailRequest {
  int32 id = 1;
  int32 user_id = 2;
}

message UserCartResponse {
  int32 order_id = 1;
  float amount = 2;
  string status = 3;
  repeated ItemCart items = 4;
}

message ItemCart {
  int32 id = 1;
  int32 product_id = 2;
  int64 quantity = 3;
  float price = 4;
}

message UserCartRequest {
  int32 user_id = 1;
}

service OrderService {
  rpc AddProduct(AddProductRequest) returns (CommonResponse) {
    option (google.api.http) = {
      post: "/v1/order"
      body: "*"
    };
  }

  rpc DeleteDetail(DeleteDetailRequest) returns (CommonResponse) {
    option (google.api.http) = {
      delete: "/v1/detail/{id}"
      body: "user_id"
    };
  }

  rpc GetUserCart(UserCartRequest) returns (UserCartResponse) {
    option (google.api.http) = {
      get: "/v1/cart/{user_id}"
    };
  }
}
